main/default/objects/Opportunity/fields/Capture_Manager__c.field-meta.xml
<CustomField>
    <fullName>Capture_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>