main/default/objects/Opportunity/fields/Delivery_Project_Executive__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Project_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be a VP or higher</inlineHelpText>
    <label>Delivery Project Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Delivery Project Executive)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>