main/default/objects/Opportunity/fields/Graphics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphics Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Graphics Lead)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>