main/default/objects/Opportunity/fields/INPT_Award_Type__c.field-meta.xml
<CustomField>
    <fullName>INPT_Award_Type__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity award type. Examples are &quot;IDIQ - GWAC&quot; or &quot;Task / Delivery Order&quot;</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity award type. Examples are &quot;IDIQ - GWAC&quot; or &quot;Task / Delivery Order&quot;</inlineHelpText>
    <label>IQ Award Type</label>
    <length>140</length>
    <type>Text</type>
</CustomField>