main/default/objects/Opportunity/fields/INPT_Competition_Type__c.field-meta.xml
<CustomField>
    <fullName>INPT_Competition_Type__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity competition type. Examples of competition types are: &quot;8(a) Set-Aside&quot; and &quot;Full and Open&quot;.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity competition type. Examples of competition types are: &quot;8(a) Set-Aside&quot; and &quot;Full and Open&quot;.</inlineHelpText>
    <label>IQ Competition Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>