main/default/objects/Opportunity/fields/INPT_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>INPT_Contract_Type__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity contract type. An example of a contract type is: &quot;Cost Plus Award Fee&quot;.</description>
    <inlineHelpText>This field is used by the GoWin IQ Connector. This field defines the GovWin IQ Opportunity contract type. An example of a contract type is: &quot;Cost Plus Award Fee&quot;.</inlineHelpText>
    <label>IQ Contract Type</label>
    <length>140</length>
    <type>Text</type>
</CustomField>