main/default/objects/Opportunity/fields/INPT_Contract_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>INPT_Contract_Vehicles__c</fullName>
    <label>IQ Contract Vehicles</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>