main/default/objects/Opportunity/fields/INPT_Duration__c.field-meta.xml
<CustomField>
    <fullName>INPT_Duration__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity contract duration in terms of base and option years and months.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity contract duration in terms of base and option years and months.</inlineHelpText>
    <label>IQ Duration</label>
    <length>140</length>
    <type>Text</type>
</CustomField>