main/default/objects/Opportunity/fields/INPT_Government_Level_2__c.field-meta.xml
<CustomField>
    <fullName>INPT_Government_Level_2__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ level 2 government entity assigned. This is an agency if the government is federal and a department or city or county if the government is state&amp;local.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ level 2 government entity assigned. This is an agency if the government is federal and a department or city or county if the government is state&amp;local.</inlineHelpText>
    <label>IQ Government Level 2</label>
    <length>140</length>
    <type>Text</type>
</CustomField>