main/default/objects/Opportunity/fields/INPT_Government_Site__c.field-meta.xml
<CustomField>
    <fullName>INPT_Government_Site__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity government web site URL.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity government web site URL.</inlineHelpText>
    <label>IQ Government Site</label>
    <type>Url</type>
</CustomField>