main/default/objects/Opportunity/fields/INPT_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>INPT_Opportunity_URL__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field is the URL of the related GovWin IQ Opportunity.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field is the URL of the related GovWin IQ Opportunity.</inlineHelpText>
    <label>IQ Opportunity URL</label>
    <type>Url</type>
</CustomField>