main/default/objects/Opportunity/fields/INPT_Primary_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>INPT_Primary_NAICS_Code__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity Primary NAICS code.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity Primary NAICS code.</inlineHelpText>
    <label>IQ Primary NAICS Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>