main/default/objects/Opportunity/fields/INPT_Primary_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>INPT_Primary_NAICS_Description__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the description that applies to the GovWin IQ Opportunity  Primary NAICS code.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the description that applies to the GovWin IQ Opportunity  Primary NAICS code.</inlineHelpText>
    <label>IQ Primary NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>