main/default/objects/Opportunity/fields/INPT_Primary_Requirement__c.field-meta.xml
<CustomField>
    <fullName>INPT_Primary_Requirement__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the Opportunity  Primary Requirement.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the Opportunity  Primary Requirement.</inlineHelpText>
    <label>IQ Primary Requirement</label>
    <length>120</length>
    <type>Text</type>
</CustomField>