main/default/objects/Opportunity/fields/INPT_RFP_Number__c.field-meta.xml
<CustomField>
    <fullName>INPT_RFP_Number__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity Solicitation number.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity Solicitation number.</inlineHelpText>
    <label>IQ Solicitation Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>