main/default/objects/Opportunity/fields/INPUT_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>INPUT_LastModifiedDate__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This meta data field is a timestamp that defines the date and time that this opportunity was imported or last updated from GovWin IQ.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This meta data field is a timestamp that defines the date and time that this opportunity was imported or last updated from GovWin IQ.</inlineHelpText>
    <label>IQ Last Modified Date</label>
    <type>DateTime</type>
</CustomField>