main/default/objects/Opportunity/fields/INPUT_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>INPUT_Opportunity_ID__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ ID of the GovWin IQ Opportunity.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ ID of the GovWin IQ Opportunity.</inlineHelpText>
    <label>IQ Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>