main/default/objects/Opportunity/fields/INPUT_Status__c.field-meta.xml
<CustomField>
    <fullName>INPUT_Status__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity procurement status. An example of a status is: &quot;Post-RFP&quot;.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ Opportunity procurement status. An example of a status is: &quot;Post-RFP&quot;.</inlineHelpText>
    <label>IQ Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>