main/default/objects/Opportunity/fields/INPUT_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>INPUT_Update_Date__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This meta data field defines the date that the content of this imported INPUT opportunity was last updated on the GovWin IQ site.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This meta data field defines the date that the content of this imported opportunity was last updated on the GovWin IQ site.</inlineHelpText>
    <label>IQ Update Date</label>
    <type>Date</type>
</CustomField>