main/default/objects/Opportunity/fields/Lead_Subject_Matter_Expert__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subject_Matter_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Subject Matter Expert</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Lead Subject Matter Expert)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>