main/default/objects/Opportunity/fields/Legal_Lead__c.field-meta.xml
<CustomField>
    <fullName>Legal_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Legal Lead)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>