main/default/objects/Opportunity/fields/Link_to_SharePoint_Site__c.field-meta.xml
<CustomField>
    <fullName>Link_to_SharePoint_Site__c</fullName>
    <label>Link to SharePoint Site</label>
    <type>Url</type>
</CustomField>