main/default/objects/Opportunity/fields/Offering_Lead__c.field-meta.xml
<CustomField>
    <fullName>Offering_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>