main/default/objects/Opportunity/fields/Project_Billing_Executive__c.field-meta.xml
<CustomField>
    <fullName>Project_Billing_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be VP or higher. Responsible for invoicing to client</inlineHelpText>
    <label>Project Billing Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>