main/default/objects/Opportunity/fields/Project_Delivery_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Delivery_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Delivery Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>