main/default/objects/Opportunity/fields/Proposal_Support_Lead__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Support_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Support Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Proposal Support Lead)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>