main/default/objects/Opportunity/fields/Quality_Assurance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assurance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Assurance Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>