main/default/objects/Opportunity/fields/Technical_Section_Writer__c.field-meta.xml
<CustomField>
    <fullName>Technical_Section_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Section Writer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Technical Section Writer)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>