main/default/objects/Opportunity/fields/Volume_Manager__c.field-meta.xml
<CustomField>
    <fullName>Volume_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volume Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Volume Manager)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>