main/default/objects/Opportunity/listViews/Elaine_Opportunity_List_View.listView-meta.xml
<ListView>
    <fullName>Elaine_Opportunity_List_View</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Elaine Opportunity List View</label>
</ListView>