main/default/objects/Opportunity/listViews/NCC_Opportunity_View.listView-meta.xml
<ListView>
    <fullName>NCC_Opportunity_View</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Delivery_Project_Executive__c</columns>
    <columns>Link_to_SharePoint_Site__c</columns>
    <columns>Project_Delivery_Lead__c</columns>
    <columns>Offering_Lead__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Stage 5:  Business Won,Stage 6:  Business Lost,Stage 7: Opportunity Withdrawn</value>
    </filters>
    <label>NCC Opportunity View</label>
</ListView>